Mobile site & Better video settings close button

--- a/WebInterface/Video/index.html
+++ b/WebInterface/Video/index.html
@@ -54,7 +54,7 @@
 		</div>
 		<div>
 			<button title="Add all to queue" id="add-all-queue-btn"><img
-					src="/Assets/ic_playlist_add_white.svg"></button>
+					 src="/Assets/ic_playlist_add_white.svg"></button>
 			<button title="Overflow menu" id="overflow-btn"><img src="/Assets/ic_more_vert_white.svg"></button>
 		</div>
 	</header>
@@ -91,7 +91,7 @@
 						<input type="file" id="captions">
 					</div>
 
-					<button title="close menu">X</button>
+					<button title="Close menu"><img src="/Assets/ic_close_white.svg" alt="Close icon" /></button>
 				</div>
 
 				<div id="videoElem">
@@ -112,7 +112,7 @@
 
 						<div>
 							<button title="Enable / disable Picture-In-Picture" id="pip-toggle" disabled
-								style="display: none">
+									style="display: none">
 								<img src="Assets/ic_picture_in_picture_white.svg">
 							</button>
 							<button title="More settings" id="settings-toggle">
@@ -140,11 +140,11 @@
 				<h4>Queue</h4>
 				<div id="queueBtnHolder">
 					<button onclick="clearQueue()" title="Clear queue"><img
-							src="/Assets/ic_clear_all_black.svg"></button>
+							 src="/Assets/ic_clear_all_black.svg"></button>
 					<button onclick="shuffleQueue()" title="Shuffle queue"><img
-							src="/Assets/ic_shuffle_black.svg"></button>
+							 src="/Assets/ic_shuffle_black.svg"></button>
 					<button onclick="saveQueueToTmp()" title="Save queue"><img
-							src="/Assets/ic_save_black.svg" /></button>
+							 src="/Assets/ic_save_black.svg" /></button>
 				</div>
 				<div id="queue" ondrop="drop(event)" ondragover="allowDrop(event)">
 					<i>Queue is empty</i>
