--- a/WebInterface/Audio/createPlaylist.html
+++ b/WebInterface/Audio/createPlaylist.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
 
 	<title>Music Stream - Create Playlist</title>
 
-	<link rel="shortcut icon" href="Assets/Icons/favicon.ico"/>
-	<link rel="shortcut icon" href="Assets/Icons/favicon.ico" type="image/vnd.microsoft.icon"/>
+	<link rel="shortcut icon" href="Assets/Icons/favicon.ico" />
+	<link rel="shortcut icon" href="Assets/Icons/favicon.ico" type="image/vnd.microsoft.icon" />
 
 	<link rel="apple-touch-icon" sizes="57x57" href="Assets/Icons/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="Assets/Icons/apple-icon-60x60.png">
@@ -16,7 +17,7 @@
 	<link rel="apple-touch-icon" sizes="144x144" href="Assets/Icons/apple-icon-144x144.png">
 	<link rel="apple-touch-icon" sizes="152x152" href="Assets/Icons/apple-icon-152x152.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="Assets/Icons/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="Assets/Icons/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="Assets/Icons/android-icon-192x192.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="Assets/Icons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="Assets/Icons/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="Assets/Icons/favicon-16x16.png">
@@ -26,21 +27,20 @@
 	<!--Let browser know website is optimized for mobile-->
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
 	<!-- <meta name="mobile-web-app-capable" content="yes"/> -->
-	<meta name="theme-color" content="#16a085"/>
+	<meta name="theme-color" content="#16a085" />
 	<meta name="msapplication-TileColor" content="#16a085">
-	<meta name="msapplication-navbutton-color" content="#16a085"/>
-	<meta name="apple-mobile-web-app-status-bar-style" content="#16a085"/>
+	<meta name="msapplication-navbutton-color" content="#16a085" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#16a085" />
 
-	<link href="all.css" rel="stylesheet" type="text/css" media="screen"/>
-	<link href="main.css" rel="stylesheet" type="text/css" media="screen"/>
-	<link href="seekbarStyle.css" rel="stylesheet" type="text/css" media="screen"/>
+	<link href="all.css" rel="stylesheet" type="text/css" media="screen" />
+	<link href="main.css" rel="stylesheet" type="text/css" media="screen" />
 
 	<script type="text/javascript">
 		let playlist = [];
 
 		function getData() {
 			return new Promise((resolve, reject) => {
-				fetch('/data/', {credentials: 'same-origin'}).then(response => {
+				fetch('/data/', { credentials: 'same-origin' }).then(response => {
 					if (response.type === 'opaque') reject('Received a response, but it\'s opaque so can\'t examine it');
 					else if (response.status !== 200) reject('Looks like there was a problem. Status Code: ' + response.status);
 					else {
@@ -74,7 +74,7 @@
 				const buttonElem = document.createElement('button');
 
 				buttonElem.addEventListener('click', evt => handlePlaylist(key));
-				buttonElem.classList.add('listItem', key);
+				buttonElem.classList.add('listElem', key);
 				buttonElem.innerText = object;
 				buttonElem.title = object;
 
@@ -112,9 +112,9 @@
 				if (playlistName != '') {
 					if (innerElems.length > 1) {
 						if (confirm('Are you sure the playlist is okay like this?')) {
-							const jsonData = {name: playlistName, songs: innerElems.map(obj => {return obj.innerText})};
+							const jsonData = { name: playlistName, songs: innerElems.map(obj => { return obj.innerText }) };
 
-							fetch('/updatePlaylist/', {method: "POST", body: JSON.stringify(jsonData), credentials: 'same-origin'}).then(response => {
+							fetch('/updatePlaylist/', { method: "POST", body: JSON.stringify(jsonData), credentials: 'same-origin' }).then(response => {
 								response.json().then(json => {
 									if (json.success) {
 										if (json.error) alert('Something on the server went wrong.\n' + json.info);
@@ -124,7 +124,7 @@
 										} else alert('Something went wrong', json.data);
 									} else alert(json.info);
 								});
-							}).catch( err => {
+							}).catch(err => {
 								console.error('An error occurred', err);
 							});
 						}
@@ -190,15 +190,18 @@
 			updateInterface();
 		}
 
-		window.onload = load;
+		document.addEventListener('DOMContentLoaded', load);
 	</script>
 
 </head>
+
 <body>
 
 	<header>
 		<button id="back"><img src="Assets/ic_arrow_back_white.svg"></button>
-		<div style="padding-top: 5px"><h1>Create Playlist</h1></div>
+		<div style="padding-top: 5px">
+			<h1>Create Playlist</h1>
+		</div>
 		<div id="searchBar"><input type="text" id="searchInp"></div>
 		<div id="searchBtn"><img src="Assets/ic_search_white.svg"></div>
 	</header>
@@ -210,7 +213,11 @@
 				<button title="Add whole list to queue" style="float: right;" onclick="addWholeSongsToQueue()"><img src="Assets/ic_playlist_add_black.svg"></button>
 				<hr>
 				<div id="songs">
-					<div class="ball-scale-multiple"><div></div><div></div><div></div></div>
+					<div class="ball-scale-multiple">
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
 				</div>
 			</div>
 			<div id="playlistsContainer">
@@ -221,10 +228,11 @@
 		</div>
 
 		<button id="fab"><img src="Assets/ic_send_white.svg"></button>
-	</div>
+		</div>
 
 
-</main>
+	</main>
 
 </body>
+
 </html>
