--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -184,7 +184,7 @@
 
 		<p>
 			If you cannot find what you are looking for or you have found a bug, don't hesitate to ask: <a
-				href="https://github.com/jantje19/MusicStream/issues">Github</a>
+			   href="https://github.com/jantje19/MusicStream/issues">Github</a>
 		</p>
 	</header>
 
@@ -225,7 +225,7 @@
 
 				<p>
 					This playlist will be updated when a song ends. The name is editable on the <a
-						href="/settings/">settings page</a>. Take into account that after initialization of the playlist
+					   href="/settings/">settings page</a>. Take into account that after initialization of the playlist
 					name you have to update the <i>playlists.json</i> too.
 				</p>
 
@@ -413,8 +413,10 @@
 
 				<p>
 					Fetches lyrics from <a href="https://makeitpersonal.co"><i>makeitpersonal.co</i></a>.<br>
-					A valid request looks like this: <a href="/getLyrics/Michael Jackson/Thriller">/getLyrics/Michael
-						Jackson/Thriller</a>
+					A valid request looks like this:
+					<a href="/getLyrics/Imagine Dragons/Demons">
+						/getLyrics/Imagine Dragons/Demons
+					</a>
 				</p>
 
 				<h4 style="font-size: 0.8em;"><a href="/updatePlaylist">Update Playlist</a></h4>
@@ -517,7 +519,7 @@
 					Unfortunally YouTube updates its video API rather frequently. This means that the NPM-package
 					responsable for downloading the YouTube video has to be updated frequently. So try running the
 					<code>npm update</code> command. If that doesn't work go to <a
-						href="https://www.npmjs.com/package/ytdl-core">this</a> page and find the latest version number
+					   href="https://www.npmjs.com/package/ytdl-core">this</a> page and find the latest version number
 					(most of the times it looks something like <i>0.20.1</i>), then run
 					<code>npm install ytdl-core@VERSION-NUMBER</code> (of course replace <i>VERSION-NUMBER</i> with the
 					version number found on <a href="https://www.npmjs.com/package/ytdl-core">this</a> page).
@@ -538,8 +540,8 @@
 				<b>I have an amazing idea for this program</b>
 				<p>
 					Ideas are always welcome. You can add an <a
-						href="https://github.com/Jantje19/MusicStream/issues/new/">issue on Github</a> with the <i
-						style="background-color: yellow">idea</i> tag.
+					   href="https://github.com/Jantje19/MusicStream/issues/new/">issue on Github</a> with the <i
+					   style="background-color: yellow">idea</i> tag.
 				</p>
 			</div>
 
@@ -549,7 +551,7 @@
 					You sure can. All the support is greatly appreciated. I am currently maintaining this project on my
 					own. Every designer, product developer, software engenierer or other help is always helpfull. Even
 					pointing out spelling mistakes is super useful. You can fork this project on <a
-						href="https://github.com/jantje19/MusicStream/">Github</a>.
+					   href="https://github.com/jantje19/MusicStream/">Github</a>.
 				</p>
 			</div>
 		</div>
