--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -377,8 +377,7 @@
 
 				<hr>
 
-				<p>The audio player can accept a <i>query</i> search parameter, you can give it song titles and it will
-					play them. If the song title contains an ampersand, replace it with <i>[AMP]</i>.</p>
+				<p>The audio player can accept a <i>queue</i> search parameter, you can give it song titles and it will play them.</p>
 
 				<hr>
 
