Updated mobile page

--- a/WebInterface/Mobile/index.html
+++ b/WebInterface/Mobile/index.html
@@ -9,8 +9,7 @@
 	<meta name="theme-color" content="#16a085" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" defer>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" defer>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet" defer>
 	<script>
 		const sortMethod = '{{audioDefaultSortType}}';
 
@@ -21,6 +20,6 @@
 
 <body>
 	<app-root class="mat-app-background"></app-root>
-<script src="runtime-es2015.b948044840398824f16e.js" type="module"></script><script src="runtime-es5.b948044840398824f16e.js" nomodule defer></script><script src="polyfills-es5.b7e2f9f08b35601e5daf.js" nomodule defer></script><script src="polyfills-es2015.112742535940c89f9491.js" type="module"></script><script src="main-es2015.1c71bfc418685a74ffe3.js" type="module"></script><script src="main-es5.1c71bfc418685a74ffe3.js" nomodule defer></script></body>
+<script src="runtime-es2015.b948044840398824f16e.js" type="module"></script><script src="runtime-es5.b948044840398824f16e.js" nomodule defer></script><script src="polyfills-es5.b7e2f9f08b35601e5daf.js" nomodule defer></script><script src="polyfills-es2015.112742535940c89f9491.js" type="module"></script><script src="main-es2015.72d63b4de05ff763188b.js" type="module"></script><script src="main-es5.72d63b4de05ff763188b.js" nomodule defer></script></body>
 
 </html>
