Bugfixes and improvements

--- a/WebInterface/settings.html
+++ b/WebInterface/settings.html
@@ -5,6 +5,30 @@
 
 	<title>Settings</title>
 
+	<link rel="shortcut icon" href="Assets/Icons/favicon.ico" />
+	<link rel="shortcut icon" href="Assets/Icons/favicon.ico" type="image/vnd.microsoft.icon" />
+
+	<link rel="apple-touch-icon" sizes="57x57" href="Assets/Icons/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="Assets/Icons/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="Assets/Icons/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="Assets/Icons/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="Assets/Icons/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="Assets/Icons/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="Assets/Icons/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="Assets/Icons/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="Assets/Icons/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="Assets/Icons/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="Assets/Icons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="Assets/Icons/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="Assets/Icons/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileImage" content="Assets/Icons/ms-icon-144x144.png">
+
+	<meta name="theme-color" content="#16a085" />
+	<meta name="msapplication-TileColor" content="#16a085">
+	<meta name="msapplication-navbutton-color" content="#16a085" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#16a085" />
+
 	<style type="text/css">
 		* {
 			font-family: -apple-system, BlinkMacSystemFont,
