--- a/WebInterface/Audio/offlineDownload.html
+++ b/WebInterface/Audio/offlineDownload.html
@@ -219,7 +219,7 @@
 					}, { passive: true });
 				}).catch(err => console.error(err));
 			} else {
-				alert('Your browser does not support this functionality. You will be redirected to the home page...');
+				alert('Your browser does not support this functionality or dissalows it. You will be redirected to the home page...');
 				window.location = '/';
 			}
 		});
