--- a/WebInterface/Audio/index.html
+++ b/WebInterface/Audio/index.html
@@ -266,6 +266,27 @@
 		</div>
 	</main>
 
+	<div id="lyricsElem">
+		<template id="lyricsElem-loading">
+			<h3>Loading</h3>
+			<br>
+			<div>
+				<div class="ball-scale-multiple"><div></div><div></div><div></div></div>
+			</div>
+		</template>
+		<template id="lyricsElem-error">
+			<h3>Error</h3>
+			<br>
+			<p style="text-align: center;"></p>
+			<a style="color: gray" target="_blank" href="https://makeitpersonal.co/songs/new">Add them yourself.</a>
+		</template>
+		<template id="lyricsElem-lyrics">
+			<h3>Lyrics</h3>
+			<p></p>
+		</template>
+		<div></div>
+	</div>
+
 </body>
 
 </html>
