--- a/WebInterface/Audio/offlineDownload.html
+++ b/WebInterface/Audio/offlineDownload.html
@@ -139,15 +139,15 @@
 
 				Promise.all([getData(), window.sw]).then(([json, swFuncs]) => {
 					document.getElementById('fab').addEventListener('click', evt => {
-						const updateHandler = (elem, progress) => {
-							elem.style.setProperty('--progress', (progress * 100) + '%');
+						const updateHandler = (elem, { progress }) => {
+							if (elem && progress)
+								elem.style.setProperty('--progress', (progress * 100) + '%');
 						}
 
 						Promise.all(Array.from(queue).map((song, index) => {
 							return swFuncs.downloadFile(
 								song,
-								progress => updateHandler(queueElem.children[index], progress),
-								() => { console.warn('TODO') }
+								progress => updateHandler(queueElem.children[index], progress)
 							);
 						})).then(songs => {
 							const doFinish = () => {
